--- a/Web/Web/Views/Auth/UserList.cshtml
+++ b/Web/Web/Views/Auth/UserList.cshtml
@@ -54,7 +54,7 @@
                 <td>@user.RoleId</td>
                 <td>
                     <a asp-controller="Auth" asp-action="EditUser" asp-route-id="@user.Id" class="btn btn-warning btn-sm">Edit</a>
-                    <form asp-controller="Auth" asp-action="DeleteUser" asp-route-id="@user.Id" method="post" class="d-inline">
+                    <form asp-controller="Admin" asp-action="DeleteUser" asp-route-id="@user.Id" method="post" class="d-inline">
                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                     </form>
                 </td>
